_infrastructure/certificates/generated/dummy-traefik-cert-loader.yaml
# THIS FILE HAS BEEN AUTOMATICALLY GENERATED.
# instead of editing this one, either edit the base yaml or certificate config.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-traefik-cert-loader
  labels:
    app: dummy-traefik-cert-loader
spec:
  template:
    metadata:
      name: dummy-traefik-cert-loader
      labels:
        app: dummy-traefik-cert-loader
    spec:
      containers:
        - name: dummy-traefik-cert-loader
          image: containous/whoami
          ports:
            - containerPort: 80
  selector:
    matchLabels:
      app: dummy-traefik-cert-loader
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-traefik-cert-loader
spec:
  selector:
    app: dummy-traefik-cert-loader
  ports:
    - port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-traefik-cert-loader
spec:
  rules:
    - host: whoami.jemand771.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-traefik-cert-loader
                port:
                  number: 80
    - host: whoami.771.red
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-traefik-cert-loader
                port:
                  number: 80
    - host: whoami.771.blue
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-traefik-cert-loader
                port:
                  number: 80
  tls:
    - secretName: cert-key-jemand771-net
    - secretName: cert-key-771-red
    - secretName: cert-key-771-blue
